{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 57,
  "lineage": "a36b8d61-958b-999f-a194-f03c26d4d72d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066784287e358dad1",
            "arn": "arn:aws:ec2:us-east-1:387148132788:instance/i-0d53c460775790252",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d53c460775790252",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092dfbcbb313e32c2",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_ip": "54.147.146.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07513269f618ddea9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e2ad6909fa03eec",
            "tags": {
              "Name": "my_web_server"
            },
            "tags_all": {
              "Name": "my_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0478163c1b20c7189"
            ]
          },
          "dependencies": [
            "aws_security_group.my_web_server_sg",
            "aws_subnet.my_web_server_subnet",
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_web_server_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387148132788:internet-gateway/igw-0d7de2c867b5c8f90",
            "id": "igw-0d7de2c867b5c8f90",
            "owner_id": "387148132788",
            "tags": {
              "Name": "my_web_server_ig"
            },
            "tags_all": {
              "Name": "my_web_server_ig"
            },
            "vpc_id": "vpc-0d0bad14bba1f40de"
          },
          "dependencies": [
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_webs_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387148132788:route-table/rtb-0f8252c68fb4a4da6",
            "id": "rtb-0f8252c68fb4a4da6",
            "owner_id": "387148132788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7de2c867b5c8f90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_webs_server_rt"
            },
            "tags_all": {
              "Name": "my_webs_server_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0bad14bba1f40de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_web_server_ig",
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_web_server_rt_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0f83023de6b0fba",
            "route_table_id": "rtb-0f8252c68fb4a4da6",
            "subnet_id": "subnet-07e2ad6909fa03eec"
          },
          "dependencies": [
            "aws_internet_gateway.my_web_server_ig",
            "aws_route_table.my_webs_server_rt",
            "aws_subnet.my_web_server_subnet",
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387148132788:security-group/sg-0478163c1b20c7189",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0478163c1b20c7189",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240823182626023400000001",
            "name_prefix": "terraform-",
            "owner_id": "387148132788",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0bad14bba1f40de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_web_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387148132788:subnet/subnet-07e2ad6909fa03eec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2ad6909fa03eec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387148132788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_web_server_subnet"
            },
            "tags_all": {
              "Name": "my_web_server_subnet"
            },
            "vpc_id": "vpc-0d0bad14bba1f40de"
          },
          "dependencies": [
            "aws_vpc.my_web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_web_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387148132788:vpc/vpc-0d0bad14bba1f40de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01109b8b9875964ec",
            "default_route_table_id": "rtb-07ec2649b41e9bc28",
            "default_security_group_id": "sg-0c5c55ae43dc5e40c",
            "dhcp_options_id": "dopt-0a53688d585649948",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0bad14bba1f40de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ec2649b41e9bc28",
            "owner_id": "387148132788",
            "tags": {
              "Name": "my_web_server_vpc"
            },
            "tags_all": {
              "Name": "my_web_server_vpc"
            }
          }
        }
      ]
    }
  ]
}